--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -335,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = None\n",
+    "address = 'None'\n",
     "address"
    ]
   },
