Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,12 +405,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"John Doe\"\n",
-    "email = \"fa\""
+    "email = \"farts.vandelay@gmail.com\""
    ]
   },
   {
